[tool.poetry]
name = "upptime-prometheus-exporter"
version = "0.1.0"
description = "A Prometheus exporter for the Upptime status page"
authors = ["Fabian Volkers <f.volkers@windreserve.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.12.0"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
